syntax = "proto3";

option java_package = "com.eblan.launcher.data.datastore.proto.general";
option java_multiple_files = true;

enum DarkThemeConfigProto {
  DarkThemeConfigSystem = 0;
  DarkThemeConfigLight = 1;
  DarkThemeConfigDark = 2;
}