syntax = "proto3";

option java_package = "com.eblan.launcher.data.datastore.proto.gesture";
option java_multiple_files = true;

message EblanActionProto {
  EblanActionTypeProto eblanActionTypeProto = 1;

  string componentName = 2;
}

enum EblanActionTypeProto {
  None = 0;
  OpenAppDrawer = 1;
  OpenNotificationPanel = 2;
  OpenApp = 3;
  LockScreen = 4;
  OpenQuickSettings = 5;
  OpenRecents = 6;
}